# udp_server_client

UDPClient/: CMakeLists.txt  UDPClient.cpp  UDPClient.h  main.cpp  package.cpp  package.h
UDPServer/: CMakeLists.txt  UDPServer.cpp  UDPServer.h  main.cpp  package.cpp  package.h
